profile page horizontal overflow fixed. Achievements carroussel started. search page MVC created.

--- a/UpFAQ/public/css/showProfile.css
+++ b/UpFAQ/public/css/showProfile.css
@@ -66,7 +66,6 @@
   	margin-top: 480px;
   	margin-left: 420px;
   	font-size: 28px;
-  	width: 1000px;
   	padding-top: 140px;
   	color: #ECEFF1;
 }
